tests/baselines/reference/computedPropertyNames20_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames20_ES5.ts(2,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames20_ES5.ts (1 errors) ====
    var obj = {
        [this.bar]: 0
        ~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }